--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/MORAI_ROS_morai_msgs"]
 	path = third_party/MORAI_ROS_morai_msgs
 	url = https://github.com/MORAI-Autonomous/MORAI-ROS_morai_msgs.git
+[submodule "third_party/ros-humble-ros1-bridge-builder"]
+	path = third_party/ros-humble-ros1-bridge-builder
+	url = https://github.com/TommyChangUMD/ros-humble-ros1-bridge-builder.git
